Fix city spelling in config

--- a/index.html
+++ b/index.html
@@ -36,6 +36,35 @@
             <button id="checkout-button" style="display:none;">Finalizar Pedido</button>
         </section>
 
+        <section id="address-container" style="display:none;">
+            <h2>Endereço de Entrega</h2>
+            <div class="address-field">
+                <label for="street">Logradouro:</label>
+                <input type="text" id="street">
+            </div>
+            <div class="address-field">
+                <label for="number">Número:</label>
+                <input type="text" id="number">
+            </div>
+            <div class="address-field">
+                <label for="complement">Complemento:</label>
+                <input type="text" id="complement">
+            </div>
+            <div class="address-field">
+                <label for="neighborhood">Bairro:</label>
+                <input type="text" id="neighborhood">
+            </div>
+            <div class="address-field">
+                <label for="city">Cidade:</label>
+                <input type="text" id="city">
+            </div>
+            <div class="address-field">
+                <label for="cep">CEP:</label>
+                <input type="text" id="cep">
+            </div>
+            <button id="save-address-button">Salvar Endereço</button>
+        </section>
+
         <section id="pix-display-container" style="display:none;">
             <h2>Pagamento PIX</h2>
             <p>Escaneie o QR Code abaixo ou copie o código para pagar:</p>
