Add clear history feature

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
         <section id="order-history-container">
             <h2>Seus Últimos Pedidos</h2>
+            <button id="clear-history-button">Limpar Histórico</button>
             <div id="past-orders-list">
                 <p>Nenhum pedido encontrado no seu histórico.</p>
             </div>
