Finalize Google Pay integration

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <button id="whatsapp-share-button" style="margin-top: 10px;">Compartilhar Pedido no WhatsApp</button>
         </section>
 
+        <!-- Hidden until checkout -->
         <section id="google-pay-container" style="display:none;">
             <h2>Pagar com Google Pay</h2>
             <div id="google-pay-button"></div>
