Add basic analytics section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
                 <p>Nenhum pedido encontrado no seu histórico.</p>
             </div>
         </section>
+        <section id="analytics-container">
+            <h2>Estatísticas</h2>
+            <div id="analytics-content">
+                <p>Nenhum dado disponível.</p>
+            </div>
+        </section>
     </main>
 
     <footer>
