feat: display open status

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Tembiu</h1>
         <p>Seu cardápio digital open source!</p>
-        <!-- Status (Aberto/Fechado) will go here -->
+        <p id="open-status"></p>
         <button id="theme-toggle-button">Mudar Tema</button>
     </header>
 
