--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script async src="https://pay.google.com/gp/p/js/pay.js" onload="onGooglePayLoaded()"></script>
+    <script src="https://unpkg.com/@libsql/client@0.6.0/dist/index.js"></script>
     <script src="js/main.js"></script>
     <script src="js/google_pay.js"></script>
 </body>
